--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "pokedex-react",
   "private": true,
   "version": "0.0.0",
+  "homepage": "buttowsk.github.io/pokedex-react",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
