--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "pokedex-react",
   "private": true,
+  "homepage": "https://buttowsk.github.io/pokedex-react/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
