--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "colorthief": "^2.4.0",
     "gh-pages": "^5.0.0",
+    "pokeapi-js-wrapper": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
