--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
