--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "axios": "^1.3.4",
     "colorthief": "^2.4.0",
+    "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scroll-to-top": "^3.0.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
