--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "concurrently \"json-server --watch src/server/db.json -p 8001\" \"node src/server/server.js\""
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "colorthief": "^2.4.0",
     "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
+    "json-server": "^0.17.3",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -28,6 +32,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^8.0.1",
     "vite": "^4.2.0"
   }
 }
