--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "api": "concurrently \"json-server --watch src/server/db.json -p 8001\" \"node src/server/server.js\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
