--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "colorthief": "^2.4.0",
-    "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scroll-to-top": "^3.0.0",
     "styled-components": "^5.3.9",
-    "yup": "^1.1.1"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
